# bracketeditorpro

./: CMakeLists.txt  NativeHost.cpp  NativeHost2.cpp  NativeHost3.cpp  NativeHost4.cpp  build.txt  com.bracket.audit.json  regkey.txt  vcpkg.json
extension/: manifest.json  popup.html  popup.js  popup1.js
vcpkginstalled/: compiler-file-hash-cache.json  manifest-info.json  status
